# framelink

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint_test_build.yml
data/: divy_trips_limited.csv
examples/: basic_pandas.ipynb
examples/notebooks/: basic_pandas.ipynb
examples/scripts/: basic_persist_models.py
examples/th/: typehints_p1.py  typehints_p2.py  typehints_p3.py  typehints_p4.py  typehints_p5.py
pypelines/: __init__.py  core.py
src/framelink/: __init__.py  _cli.py  _core.py  _util.py  core.py  persistance.py  types.py
src/framelink/persistance/: interfaces.py
src/framelink/storage/: __init__.py  _core.py  core.py  exceptions.py  interfaces.py  pandas.py
src/pypelines/: __init__.py  core.py
tests/: conftest.py  readme.md  test_core_model.py  test_dag.py  test_logging.py  test_model.py  test_pipeline_metas.py  test_run.py  test_storage.py
tests/core/: test_cache.py  test_dag.py  test_framelink_import.py  test_logging.py  test_model.py  test_model_parsing.py  test_persistance.py  test_pipeline_metas.py  test_run.py  test_storage.py
