[tool.poetry]
name = "pypelines"
version = "0.0.1"
description = ""
authors = ["Toby Devlin <toby@tobydevlin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#todo: move to optional
pandas = "^1.5.3"
polars = "^0.16.7"
networkx = "^3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
pytest = "^7.2.1"
pre-commit = "^3.0.4"
ruff = "^0.0.249"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["E", "F"]
line-length = 120

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
